menambahkan file css dan div content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 2 Team 1</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap/style.css">
 </head>
 <body>
     <div id="page">
@@ -14,8 +15,8 @@
         </div>
 
         <!-- mas jabal -->
-        <div id="content">
-
+        <div class="container">
+            <!-- Content here -->
         </div>
 
         <!-- mas rizky -->
