--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tugas 2 Team 1</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/style.css">
+    <link rel="stylesheet" href="bootstrap/js/bootstrap.js">
 </head>
 <body>
     <div id="page">
@@ -16,7 +17,75 @@
 
         <!-- mas jabal -->
         <div class="container">
-            <!-- Content here -->
+            <h1>Home</h1>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/content1.png" class="d-block w-100" alt="gambar1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content2.png" class="d-block w-100" alt="gambar1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content3.png" class="d-block w-100" alt="gambar3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content4.png" class="d-block w-100" alt="gambar4">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content5.png" class="d-block w-100" alt="gambar5">
+                  </div><div class="carousel-item">
+                    <img src="img/content6.png" class="d-block w-100" alt="gambar6">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content7.png" class="d-block w-100" alt="gambar7">
+                  </div><div class="carousel-item">
+                    <img src="img/content8.png" class="d-block w-100" alt="gambar8">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content9.png" class="d-block w-100" alt="gambar9">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/content10.png" class="d-block w-100" alt="gambar10">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="container-fluid" id="konten">
+                <div class="row">
+                  <div class="col-sm">
+                    <h4>Profil</h4>
+                    <p>PT. Bangun Manunggal Trisno PT. Bangun Manunggal Trisno telah berpengalaman cukup banyak sejak tahun 1995 sebagai General Contractor. Pekerjaan yang …</p>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Visi dan Misi</h4>
+                    <p>Visi Memberikan rasa aman, nyaman, dan sejahtera kepada semua karyawan. Bekerja totalitas untuk mendapat hasil maksimal. Musyawarah menjadi jalan keluar …</p>
+                  </div>
+                  <div class="col-sm">
+                    <h4>Struktur Organisasi</h4>
+                    <p>LEGALITAS Akte Notaris WIDODO BUDIDARMO, SH, M.Kn : No.07. – Tanggal 25 September 2012. Surat Pengesahan Badan Hukum Perseroan Kementrian …</p>
+                  </div>
+                </div>
+              </div>
         </div>
 
         <!-- mas rizky -->
