--- a/index.html
+++ b/index.html
@@ -7,12 +7,43 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/style.css">
     <link rel="stylesheet" href="bootstrap/js/bootstrap.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="page">
         <!-- mas rizky -->
         <div id="header">
-
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">
+                  <div class="logo">
+                    <a href="#" >
+                      <img src="img/logo.png" alt="logo">
+                    </a>
+                  </div>
+                </th>
+                <th scope="col">
+                  <div class="text">
+                    <h1><a href="#">PT. Bangun Manunggal Trisno </a></h1>
+                    <p>Construction Company</p>
+                  </div>
+                </th>
+                <th scope="col" id="tombol">
+                  <div class="btn-group" role="group" aria-label="...">
+                    <div class="menu">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </div>
+                  </div>
+                </th>
+              </tr>
+            </thead>
+          </table>
         </div>
 
         <!-- mas jabal -->
