membuat header mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="page">
         <!-- mas rizky -->
-        <div id="header">
+        <div id="header" class="container-sm">
           <table class="table">
             <thead>
               <tr>
@@ -26,7 +26,7 @@
                     </a>
                   </div>
                 </th>
-                <th scope="col">
+                <th scope="col" id="tengah">
                   <div class="text">
                     <h1><a href="#">PT. Bangun Manunggal Trisno </a></h1>
                     <p>Construction Company</p>
@@ -124,7 +124,9 @@
 
         <!-- mas rizky -->
         <div id="footer">
-
+          <div class="container">
+                            
+          </div>
         </div>
     </div>
     
